objects/Account.object
<CustomObject>
    <fields>
        <fullName>AG_Contracts_for_Year__c</fullName>
        <label>AG Contracts for Year</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AG_Groups_for_Year__c</fullName>
        <label>AG Groups for Year</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AG_Rank__c</fullName>
        <label>AG Rank</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AIAFinal_NAEGS_Adjustment_Sumary_Rev_Num__c</fullName>
        <description>Final NAEGS Adjustment Summary Revision Number.B-03453.AIA field. Added to cater to the requirement : I need the ability to know the revision number of the BD when I changed over from paper format to AIA workflow in SF</description>
        <inlineHelpText>AIA - Final NAEGS Adjustment Summary Revision Number</inlineHelpText>
        <label>Final NAEGS Adjustment Summary Rev Num</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AIA_Admin_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AIA Admin User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accountss5XE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AIA_BD_Revision_Number__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Revision Number associated with the Benefit Design Record. AIA Technical field to track latest/highest revision number of BD's related to an Account. Every time a BD is created, this number is incremented. .</description>
        <label>BD Revision Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AIA_Display_Account_Team_PopUp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Account Team PopUp?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Alias_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Alias 1</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Alias_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Alias 2</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Alias_3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Alias 3</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Dedicated_Representative_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Dedicated Representative User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accountss5WQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Effective_Date__c</fullName>
        <description>This is the date that the products become effective for the account.  Also used as the anniversary date.  If there is a date here, then this Account Type should be Customer and not Prospect.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Executive_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Executive User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accountss5Xx</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Legal_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Legal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_NPN__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>National Producer Number</inlineHelpText>
        <label>Agency NPN</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auditor_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Auditor User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Automated_Enrollment_Tech_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Automated Enrollment Tech User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accountss5Vm</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Benchmark_Code__c</fullName>
        <description>When making changes to this field make sure to also make parallel changes to the Benchmark_Name__c field.</description>
        <formula>IF (Sic = "" || Sic = "0","",
  IF(CONTAINS("10,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39",LEFT(Sic,2)), "A",
    IF(CONTAINS("40,41,42,43,44,45,46,47,48,49",LEFT(Sic,2)), "B",
      IF(CONTAINS("50,51,52,53,54,55,56,57,58,59",LEFT(Sic,2)), "C", 
        IF(CONTAINS("60,61,62,63,64,65,67",LEFT(Sic,2)), "D",
          IF(CONTAINS("01,02,07,08,09,70,72,73,75,76,78,79,81,84,88,89",LEFT(Sic,2)), "E",
            IF(CONTAINS("80",LEFT(Sic,2)), "F",
              IF(CONTAINS("82",LEFT(Sic,2)), "G",
                IF(CONTAINS("83,86",LEFT(Sic,2)), "H", 
                  IF(CONTAINS("87",LEFT(Sic,2)), "I",
                    IF(CONTAINS("91,92,93,94,95,96,97,99",LEFT(Sic,2)), "J",""                    
                    )
                  ) 
                )     
              )
            )
          )
        )    
      )    
    )
  )
)</formula>
        <label>Benchmark Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benchmark_Name_Override__c</fullName>
        <description>This is a field that allows the user editing an account to override the Benchmark Name value. Normally the SIC code determines the Benchmark Name field value (which is a formula field). If a non-blank value is selected from this picklist, then that value will be used to the the Benchmark Name field. Default value is blank (no overrride).</description>
        <inlineHelpText>This  optional field is used to override the value of Benchmark Name field and defaults to None. Selecting any value other than 'None' will cause the Benchmark Name field to use that selected value instead of the normal SIC driven assigned value.</inlineHelpText>
        <label>Benchmark Name Override</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Services</fullName>
                    <default>true</default>
                    <label>Business Services</label>
                </value>
                <value>
                    <fullName>Construction and Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Educational Services</fullName>
                </value>
                <value>
                    <fullName>Engineering, Accounting, Research, Management and Related Services</fullName>
                </value>
                <value>
                    <fullName>Finance, Insurance, and Real Estate</fullName>
                </value>
                <value>
                    <fullName>Health Services</fullName>
                </value>
                <value>
                    <fullName>Membership Organizations and Social Services</fullName>
                </value>
                <value>
                    <fullName>Public Administration</fullName>
                </value>
                <value>
                    <fullName>Transportation, Communications, Electric, Gas and Sanitary Service</fullName>
                </value>
                <value>
                    <fullName>Wholesale Trade and Retail Trade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Benchmark_Name__c</fullName>
        <description>When making changes to this field make sure to also make parallel changes to the Benchmark_Code__c field.</description>
        <formula>IF (Sic = "" || Sic = "0","",

 IF( NOT(ISPICKVAL(Benchmark_Name_Override__c, "")), TEXT(Benchmark_Name_Override__c), 
IF(CONTAINS("10,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39",LEFT(Sic,2)), "Construction and Manufacturing",
    IF(CONTAINS("40,41,42,43,44,45,46,47,48,49",LEFT(Sic,2)), "Transportation, Communications, Electric, Gas and Sanitary Service",
      IF(CONTAINS("50,51,52,53,54,55,56,57,58,59",LEFT(Sic,2)), "Wholesale Trade and Retail Trade", 
        IF(CONTAINS("60,61,62,63,64,65,67",LEFT(Sic,2)), "Finance, Insurance, and Real Estate",
          IF(CONTAINS("01,02,07,08,09,70,72,73,75,76,78,79,81,84,88,89",LEFT(Sic,2)), "Business Services",
            IF(CONTAINS("80",LEFT(Sic,2)), "Health Services",
              IF(CONTAINS("82",LEFT(Sic,2)), "Educational Services",
                IF(CONTAINS("83,86",LEFT(Sic,2)), "Membership Organizations and Social Services", 
                  IF(CONTAINS("87",LEFT(Sic,2)), "Engineering, Accounting, Research, Management and Related Services",
                    IF(CONTAINS("91,92,93,94,95,96,97,99",LEFT(Sic,2)), "Public Administration",""                    
                    )
                  ) 
                )     
              )
            )
          )
        )    
      )    
    )
  )
)

)</formula>
        <label>Benchmark Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BeneFact_Coder_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BeneFact Coder User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accountss5WG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Benefit_Coder_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Benefit Coder User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Benefit_Contract_Specialist_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Benefit Contract Specialist User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accountss5YH</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Benefit_Tester_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Benefit Tester User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_County_Code__c</fullName>
        <label>Billing County Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AA-Anne Arundel</fullName>
                </value>
                <value>
                    <fullName>AL-Allegany</fullName>
                </value>
                <value>
                    <fullName>BA-Baltimore County</fullName>
                </value>
                <value>
                    <fullName>BC-Baltimore City</fullName>
                </value>
                <value>
                    <fullName>CA-Carroll</fullName>
                </value>
                <value>
                    <fullName>CE-Cecil</fullName>
                </value>
                <value>
                    <fullName>CO-Caroline</fullName>
                </value>
                <value>
                    <fullName>CR-Charles</fullName>
                </value>
                <value>
                    <fullName>CV-Calvert</fullName>
                </value>
                <value>
                    <fullName>DO-Dorchester</fullName>
                </value>
                <value>
                    <fullName>FR-Frederick</fullName>
                </value>
                <value>
                    <fullName>GA-Garrett</fullName>
                </value>
                <value>
                    <fullName>HA-Harford</fullName>
                </value>
                <value>
                    <fullName>HO-Howard</fullName>
                </value>
                <value>
                    <fullName>KE-Kent</fullName>
                </value>
                <value>
                    <fullName>MO-Montgomery</fullName>
                </value>
                <value>
                    <fullName>PG-Prince George's</fullName>
                </value>
                <value>
                    <fullName>QA-Queen Anne's</fullName>
                </value>
                <value>
                    <fullName>SM-Saint Mary's</fullName>
                </value>
                <value>
                    <fullName>SO-Somerset</fullName>
                </value>
                <value>
                    <fullName>TA-Talbot</fullName>
                </value>
                <value>
                    <fullName>WA-Washington</fullName>
                </value>
                <value>
                    <fullName>WI-Wicomico</fullName>
                </value>
                <value>
                    <fullName>WO-Worcester</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_County__c</fullName>
        <description>What is the County of the billing address?</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Cycle__c</fullName>
        <label>Billing Cycle</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Tech_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Tech User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accountss5W2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BlueFund_Health_Care_Payment_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BlueFund Health Care Payment Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Blue_Rewards_Tech_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Blue Rewards Tech User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accountss5XT</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Broker_Service_Team__c</fullName>
        <formula>IF(ISPICKVAL(Tier_Level__c,'SELECT'), 'Small Medium Group', 
IF(ISPICKVAL(Tier_Level__c,'Elite'), 'Elite', 
IF(ISPICKVAL(Tier_Level__c,'Premier'), 'Premier', 
IF(ISPICKVAL(Tier_Level__c,'Preferred'), 'Preferred','') 
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Broker Service Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CanGSCIPickUP__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CanGSCIPickUP</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultant__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this field only when this Partner can act in the role of Consultant</inlineHelpText>
        <label>Consultant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Coordinator_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Coordinator User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Manager_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Manager User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accountss5Yv</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Tech_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Tech User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accountss5Wk</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Control_Plan__c</fullName>
        <label>Control Plan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>580</fullName>
                </value>
                <value>
                    <fullName>690</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Copy_from_Renewal_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Copy from Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customized_Bill__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customized Bill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>D_U_N_S__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>D-U-N-S #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,"All Account Details Captured", "Missing: "&amp;IF( ISPICKVAL( Industry,""),"Industry, ","")&amp;""&amp;IF(ISPICKVAL(Rating,""), "Rating, ","")&amp;""&amp;IF( LEN(BillingCity) = 0, "Complete Address, ","")&amp;""&amp;IF( LEN(Phone) = 0, "Phone, ","")&amp;""&amp;IF( ISPICKVAL(Type,""), "Type",""))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Industry,""), 0,20) + IF( ISPICKVAL(Rating,""), 0,20) + IF( LEN(BillingCity) = 0, 0,20) + IF(LEN(Phone) = 0, 0,20) + IF( ISPICKVAL(Type,""), 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DocuSign_Jurisdication_value__c</fullName>
        <formula>IF(TEXT(Jurisdiction__c)= 'MD' ,IF( Billing_County__c != "Montgomery" &amp;&amp; Billing_County__c !="Prince George\'s",'CareFirst of Maryland, Inc., d/b/a CareFirst BlueCross BlueShield','Group Hospitalization and Medical Services, Inc., d/b/a CareFirst BlueCross BlueShield) (National Capital Administrative Services, Inc)'), IF(OR(TEXT(Jurisdiction__c)= "VA",TEXT(Jurisdiction__c)= "DC"),'(Group Hospitalization and Medical Services, Inc., d/b/a CareFirst BlueCross BlueShield) (National Capital Administrative Services, Inc.)',''))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DocuSign Jurisdication value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EGWP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EGWP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EIN_Number__c</fullName>
        <description>This field is derived from the D&amp;B Us Tax Id if it exists; otherwise the original user entered EIN # is used.  If this field is blank please try cleaning the record.</description>
        <formula>IF(DandbCompany.UsTaxId = NULL, EIN__c, DandbCompany.UsTaxId)</formula>
        <label>EIN Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EIN__c</fullName>
        <description>This is a replacement for SAN.  It is unique to each company.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>EIN #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date_of_Migration_Facets_to_N__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Effective Date of Migration FACETS to NASCO</inlineHelpText>
        <label>Effective Date of Migration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_date_format__c</fullName>
        <description>Formula field for handling mm dd yy for GSM email templates</description>
        <formula>LPAD(TEXT(MONTH(Account_Effective_Date__c)), 2, '0')+"/" +LPAD(TEXT(DAY(Account_Effective_Date__c)), 2, '0')+"/" 
+ MID(TEXT(YEAR(Account_Effective_Date__c)), 3, 4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective date format</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Routing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Routing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enrollment_Tech_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Enrollment Tech User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accountss5Vw</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Entity_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Entity ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Type_AG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Entity Type : AG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Entity_Type_FSP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Entity Type : FSP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Entity_Type_GP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Entity Type : GP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Entity_Type_PDB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This Field when checked will denote that the account type is Direct Plus Broker</description>
        <label>Entity Type : PDB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSP_Contracts_for_year__c</fullName>
        <label>FSP Contracts for Year</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSP_Groups_for_Year__c</fullName>
        <label>FSP Groups for Year</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Facets_Account_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Facets Account Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facets_Migration_Contact_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facets Migration Contact User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accountss5Wu</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Final_Renewal_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Final Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GP_Contracts_for_Year__c</fullName>
        <label>GP Contracts for Year</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GP_Groups_for_Year__c</fullName>
        <label>GP Groups for Year</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grandfathered_PPACA_Status__c</fullName>
        <label>Grandfathered PPACA Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Mixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grandfathered__c</fullName>
        <label>Grandfathered</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Mixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Groups_Represented__c</fullName>
        <label>Groups Represented</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Has_Sub_Groups__c</fullName>
        <defaultValue>false</defaultValue>
        <description>AIA Project. Story - B-03304</description>
        <label>Has Sub Groups?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HooversId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HooversId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>House_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>House Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ID18__c</fullName>
        <description>Provides the 18 character unique ID</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Coordinator_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation Coordinator User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Jurisdiction__c</fullName>
        <label>Jurisdiction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>VA</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>CEDE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Latest_Dental_Enrollment__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Latest Dental Enrollment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latest_Drug_Enrollment__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Latest Drug Enrollment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latest_Enrollment_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Latest Enrollment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_Medical_Enrollment__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Latest Medical Enrollment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latest_Vision_Enrollment__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Latest Vision Enrollment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legal_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accountss5X4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Local_Maryland_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check here if this is a Local Maryland Account</inlineHelpText>
        <label>Local Maryland Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Magellan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Magellan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mast_Tech_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mast Tech User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Medical_Enrollment_Represented__c</fullName>
        <label>Medical Enrollment Represented</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Merged_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Merged Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Merged Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Microsite_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Microsite URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>My_Account__c</fullName>
        <formula>if( OwnerId = $User.Id ,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NASCO_Account_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NASCO Account Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NASCO_Original_Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NASCO Original Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>National_or_Local__c</fullName>
        <description>added as part of GSM project rollout for AIA</description>
        <label>National or Local</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Local</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Eligible_Employees__c</fullName>
        <label>Number of Eligible Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Jurisdiction__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Jurisdiction</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDB_Contracts_for_Year__c</fullName>
        <label>PDB Contracts for Year</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PDB_Groups_for_Year__c</fullName>
        <label>PDB Groups for Year</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PDB_Rank__c</fullName>
        <label>PDB Rank</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PGA_Result__c</fullName>
        <label>PGA Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account Specific</fullName>
                </value>
                <value>
                    <fullName>SBU Specific</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACH Direct Debit</fullName>
                </value>
                <value>
                    <fullName>Wire Transfer</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Performance_Guarantee_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Performance Guarantee End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Performance_Guarantee_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Performance Guarantee Start Date</label>
        <type>Date</type>
    </fields>
</CustomObject>